# mmdview

./: .dagaynignore  .gitignore  .pre-commit-config.yaml  README.md  mmdview.spec  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: bump.md  check.md  commit.md  improve.md  release-notes.md  review-architecture.md  run.md
.claude/skills/: architecture-analysis.md  build-graph.md  cross-repo-workflows.md  debug-issue.md  explore-codebase.md  install-dagayn.md  reading-markdown-document.md  refactor-safely.md  review-architecture.md  review-changes.md  review-delta.md  review-pr.md  semantic-search.md  wiki-research.md  writing-markdown-document.md
.claude/skills/implement/: SKILL.md
.github/workflows/: ci.yml  release.yml
MmdviewApp/: Package.resolved  Package.swift  package-lock.json  project.yml
MmdviewApp/mmdview/: Info.plist
MmdviewApp/mmdview.xcodeproj/: project.pbxproj
MmdviewApp/mmdview/App/: AppDelegate.swift  MainMenuBuilder.swift
MmdviewApp/mmdview/FileWatching/: FileWatcher.swift
MmdviewApp/mmdview/Resources/: AppIcon.icns  viewer.html  viewer.js
MmdviewApp/mmdview/Resources/__tests__/: viewer.test.js
MmdviewApp/mmdview/Viewer/: ViewerStore.swift
MmdviewApp/mmdviewTests/: ViewerStoreIntegrationTests.swift  ViewerStoreTests.swift
MmdviewApp/scripts/: build_icon.sh
backend/: app.py  apple_events.py  logger.py  main.py  paths.py  server.py  state_store.py  update_window.py  version.py  window_manager.py
backend/routers/: events.py  html.py  update.py
backend/services/: event_bus.py  recent_files_service.py  update_service.py  watch_service.py  window_registry.py
backend/templates/: base.html  update_dialog.html  viewer.html
backend/templates/partials/: update_banner.html  update_idle.html  update_progress.html
docs/: TODO.md  native-app-design.md  web-app-design.md
docs/superpowers/plans/: 2026-05-30-mmdview.md  2026-06-04-open-with-ext.md  2026-06-05-refactor-improve.md  2026-06-06-multi-windows.md  2026-06-06-remove-top-belt.md  2026-06-06-zoom.md  2026-06-07-hyperscript-migration.md  2026-06-10-watch-reload-fix.md
docs/superpowers/specs/: 2026-05-30-mmdview-design.md  2026-06-06-multi-windows-design.md  2026-06-06-refactor-review-design.md  2026-06-06-zoom-design.md  2026-06-07-hyperscript-migration-design.md  2026-06-10-watch-reload-fix-design.md
sample/: class.mmd  er.mmd  flowchart.mmd  sequence.mmd  state.mmd
scripts/: build_icon.py  build_icon.sh  bump.sh  download_js.py  worktree-init.sh
static/css/: style.css
tests/: conftest.py
tests/e2e/: conftest.py  test_error_panel.py  test_zoom.py
tests/integration/: test_events_router.py  test_html_router.py
tests/unit/: test_app_menu.py  test_apple_events.py  test_event_bus.py  test_patch_app_delegate.py  test_paths.py  test_recent_files_service.py  test_resolve_startup_window.py  test_server.py  test_state_store.py  test_update_installer.py  test_update_service.py  test_update_window.py  test_watch_service.py  test_window_manager_load_file.py  test_window_registry.py  test_window_state.py
