[project]
name = "mmdview"
version = "0.2.30"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pywebview>=6.2",
    "watchdog>=6.0",
    "sse-starlette>=2.1",
    "jinja2>=3.1",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx>=0.28",
    "ruff>=0.9",
    "ty",
    "pre-commit",
    "pyinstaller>=6.20",
    "taskipy>=1.13",
    "bump-my-version",
    "cairosvg>=2.9.0",
    "pytest-playwright>=0.8.0",
]

[tool.taskipy.tasks]
setup        = "pre-commit install --hook-type pre-commit --hook-type post-checkout"
dev          = "python -m backend.app"
server       = "uvicorn backend.main:app --reload --port 8000"
test         = "pytest -v --cov --cov-report=term-missing"
"test:e2e"   = "pytest tests/e2e -v"
download_js  = "python scripts/download_js.py"
pre_build    = "task icon"
build        = "pyinstaller -y mmdview.spec"
icon         = "bash scripts/build_icon.sh"
lint         = "ruff check ."
format       = "ruff format ."
typecheck    = "ty check"
"lint:md"    = "markdownlint-cli2 '*.md'"
"bump:patch" = "bash scripts/bump.sh patch"
"bump:minor" = "bash scripts/bump.sh minor"
"bump:major" = "bash scripts/bump.sh major"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "C901", "I"]
mccabe.max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# pywebview stubs are incomplete; suppress stub-related errors in app.py
unresolved-attribute = "warn"
invalid-argument-type = "warn"
# AppKit is macOS-only and cannot be resolved on Linux CI
unresolved-import = "warn"

[tool.coverage.run]
source = ["backend"]
omit = [
    "tests/*",
    "backend/app.py",
    "backend/window_manager.py",
    "backend/update_window.py",
    "backend/apple_events.py",
]

[tool.coverage.report]
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.2.30"
commit = true
commit_args = "--no-verify"
message = "chore: バージョンを {current_version} から {new_version} に更新する"
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "mmdview.spec"
search = '"CFBundleShortVersionString": "{current_version}"'
replace = '"CFBundleShortVersionString": "{new_version}"'

[[tool.bumpversion.files]]
filename = "backend/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
